--- a/zevi/src/App.css
+++ b/zevi/src/App.css
@@ -116,13 +116,79 @@ color: rgb(221, 217, 2);
 .sidebar{
     padding-left: 40px;
     width: 300px;
-    background-color: #928e8e;
+    
 }
 .search-result-body{
     display: flex;
 }
 .result-data{
     margin-top: 80px;
-    background-color: pink;
+   
     width: 100%;
+}
+.card-container{
+    width: 200px;
+    margin: 20px 15px 30px 15px;
+}
+.cart-item{
+    margin-top: 75px;
+}
+.total-review{
+    font-size: 12px;
+    position:absolute;
+    padding-left: 4px;
+    padding-top: 1px;
+}
+.strikethrough{
+
+    text-decoration: line-through;
+    color: #a5a3a3;
+    font-weight: 300;
+}
+.price{
+    color: #3980f9;
+    padding-left: 8px;
+    font-weight: 600;
+}
+.heart-icon{
+    padding-top: 10px;
+    padding-left: 176px;
+    color: white;
+}
+.filled-heart{
+    padding-top: 10px;
+    padding-left: 176px;
+    color: red;
+}
+.result-data{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+    
+}
+.product-hidden{
+    position:absolute;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+    margin-top: 184px;
+    padding-left: 52px;
+    padding-right: 52px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: rgb(62, 35, 232);
+    opacity: 0;
+}
+.product-visible{
+    position:relative;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+    margin-top: 184px;
+    padding-left: 22px;
+    padding-right: 22px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: rgb(62, 35, 232);
+    opacity: 0.5;
 }
